--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "animate.css": "^3.7.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.19",
     "core-js": "^2.6.5",
@@ -26,9 +27,13 @@
     "vue-head": "^2.1.1",
     "vue-meta": "^1.6.0",
     "vue-meta-info": "^0.1.7",
+    "vue-parallaxy": "^1.1.1",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vue-typer": "^1.2.0",
+    "vue-wow": "^1.2.0",
+    "vuex": "^3.0.1",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
